--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -5,7 +5,7 @@
     <title>회원가입</title>
 </head>
 <body>
-<form method="post" action="/index.php?mid=index&act=dispMemberSignUp">
+<form method="post" action="/user/join">
     <label for="user_id">아이디</label>
     <input type="text" id="user_id" name="user_id" required>
 
