회원가입  내용변경, 찜하기 url 수정

--- a/src/main/resources/templates/cafe/like.html
+++ b/src/main/resources/templates/cafe/like.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>내가 찜한 목록</title>
-    <link rel="stylesheet" href="cafe/like">
+    <link rel="stylesheet" href="/cafe/like">
 </head>
 <body>
 <div id="contents">
