--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -12,17 +12,17 @@
     <label for="password">비밀번호</label>
     <input type="password" id="password" name="password" required>
 
-    <label for="password_confirm">비밀번호 확인</label>
-    <input type="password" id="password_confirm" name="password_confirm" required>
+    <label for="gender">성별</label>
+    <select id="gender" name="gender" required>
+        <option value="male">남성</option>
+        <option value="female">여성</option>
+    </select>
 
-    <label for="email">이메일 주소</label>
-    <input type="email" id="email" name="email" required>
+    <label for="phone">전화번호</label>
+    <input type="tel" id="phone" name="phone" required>
 
-    <label for="name">이름</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="nickname">닉네임</label>
-    <input type="text" id="nickname" name="nickname" required>
+    <label for="birthday">생일</label>
+    <input type="date" id="birthday" name="birthday" required>
 
     <button type="submit">회원가입</button>
     <button type="reset">취소</button>
