--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,35 +13,41 @@ body{
     font-weight: bold;
 }
 
-nav > .logo{
-    position: absolute;
-    z-index: 10;
-    font-size: 1.5em;
+#gnb{
+    display: flex;
+    justify-content: space-between;
+    /*align-items: center;*/
+    border-bottom: 1px solid;
+    overflow: hidden;
+    background: white;
+    padding: 0px 40px; /* 상하좌우 패딩 조절 */
+    /*height: 100px; !* 기본 높이 설정 *!*/
 }
 
-#gnb{
-    position: absolute; /* 절대좌표로 상향 배치 */
-    width: 100%; /* 폭 콘텐츠에 맞게 자동조절 */
-    border: 1px solid;
-    overflow: hidden;
-    background: #BBADA4;
-    padding-left: 40%;
+.main-menu, .user-menu {
+    display: flex;
+}
+
+.main-menu > li, .user-menu > li {
+    /*margin: 0 20px;*/
+    /*position: relative;*/
 }
 
 /* 메뉴 수평 배치 및 크기 지정 */
 #gnb > ul > li{
-    float: left;
+    /*float: left;*/
     width: 100px; height: 150px;
     padding: 20px;
 }
-#gnb > ul > li:hover{
-    background: #8D776A;
+
+.main-menu > li:hover {
+    background: #BBADA4;
 }
 
 /* 2단계 메뉴 */
 ul.depth2{
     font-size: 15px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 ul.depth2 > li:hover > a{
