--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -16,26 +16,18 @@ body{
 #gnb{
     display: flex;
     justify-content: space-between;
-    /*align-items: center;*/
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #ccc;
     overflow: hidden;
     background: white;
     padding: 0px 40px; /* 상하좌우 패딩 조절 */
-    /*height: 100px; !* 기본 높이 설정 *!*/
 }
 
 .main-menu, .user-menu {
     display: flex;
 }
 
-.main-menu > li, .user-menu > li {
-    /*margin: 0 20px;*/
-    /*position: relative;*/
-}
-
 /* 메뉴 수평 배치 및 크기 지정 */
 #gnb > ul > li{
-    /*float: left;*/
     width: 100px; height: 150px;
     padding: 20px;
 }
