--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -19,6 +19,7 @@ li{ list-style: none;}
 
 .main-menu{
     display: flex;
+    margin-left: 80px;
 }
 
 #gnb > ul.main-menu > li{
@@ -59,4 +60,22 @@ ul.depth2 > li:hover > a{
     display: flex;
     margin: 36px;
     gap: 15px; /* 간격 조절 */
+}
+
+footer {
+    background-color: #ccc;
+    padding: 60px 0;
+}
+
+footer > ul.copy_menu {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    gap: 15px;
+}
+
+footer > span.en {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
 }
