--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -66,11 +66,15 @@
     </th:block>
 
     <div class="row footer">
-        <div class="row fixed-bottom" style="z-index: -100">
-            <footer class="py-1 my-1">
-                <p class="text-center text-muted">Footer</p>
-            </footer>
-        </div>
+        <footer>
+            <ul class="copy_menu">
+                <li>주소 : 부산광역시 부산진구 중앙대로 708</li>
+                <li>(주)COFFEE 대표 : 3조</li>
+                <li>대표번호 : 1234-5678</li>
+                <li>이메일 : webproject@coffee.com</li>
+            </ul>
+            <span class="en">&copy; 2024 Coffee Company. All Rights Reserved.</span>
+        </footer>
     </div>
 
     <!--jQuery 추가-->
