--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -7,7 +7,7 @@
 <body>
 <form method="post" action="/user/join">
     <label for="user_id">아이디</label>
-    <input type="text" id="user_id" name="user_id" required>
+    <input type="text" id="user_id" name="userId" required>
 
     <label for="password">비밀번호</label>
     <input type="password" id="password" name="password" required>
@@ -29,4 +29,3 @@
 </form>
 </body>
 </html>
-<!--//-->
